--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ venv
 03_estrutura_dados.pdf
 04_estrutura_dados.pdf
 
+certificadoanalise.pdf
+certificadopython.pdf
+certificadoestruturadedados.pdf
+desafio_final.pdf
